feat: ps5 controller challenge

--- a/src/css-ps5-controller/dev.pug
+++ b/src/css-ps5-controller/dev.pug
@@ -1,4 +1,3 @@
-img(src='./ps5-controller.jpeg')
 mixin stick
   .controller__stick
     div
@@ -75,5 +74,17 @@ mixin grip-underlay(side)
           div
         .controller__dbutton.controller__dbutton--left
           div
+      .controller__auxiliary-button.controller__auxiliary-button--share
+        div
+      .controller__auxiliary-button.controller__auxiliary-button--options
+        div
+      .controller__logo
+        div
+          div
+          div
+        div
+      .controller__mute
+        div
+        div
 
 
