feat: create SVG for train around the world

--- a/src/train-path/dev.pug
+++ b/src/train-path/dev.pug
@@ -1,4 +1,6 @@
-svg(height="600", width="600", viewBox="0 0 600 600")
-  path
-button Regenerate
-.train 🚂
+//- svg(height="600", width="600", viewBox="0 0 600 600")
+//-   path
+//- button Regenerate
+//- .train 🚂
+.train__container
+  include train.pug
