--- a/src/train-path/index.pug
+++ b/src/train-path/index.pug
@@ -2,3 +2,4 @@ extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
   script(src="https://d3js.org/d3.v5.min.js")
+  script(src='./gsap.min.js')
