--- a/src/train-path/index.pug
+++ b/src/train-path/index.pug
@@ -3,3 +3,4 @@ block content
   include dev.pug
   script(src="https://d3js.org/d3.v5.min.js")
   script(src='./gsap.min.js')
+  script(src='./gsdevtools.min.js')
