feat: bear shades update

--- a/src/bear-loader/bear.pug
+++ b/src/bear-loader/bear.pug
@@ -1,5 +1,30 @@
 svg(xmlns='http://www.w3.org/2000/svg' viewBox="0 0 300 300")
   defs
+    g(id="code-block").code-block
+      rect(ry='0' y='862' x='60' height='7.5' width='74')
+      rect(ry='0' y='874' x='96' height='7.5' width='28')
+      rect(width='54' height='7.5' x='60' y='886' ry='0')
+      rect(ry='0' y='897' x='60' height='7.5' width='74')
+      rect(width='56' height='7.5' x='78' y='909' ry='0')
+      rect(ry='0' y='921' x='83' height='7.5' width='51')
+      rect(width='51' height='7.5' x='73' y='932' ry='0')
+      rect(ry='0' y='944' x='72' height='7.5' width='62')
+      rect(width='74' height='7.5' x='60' y='956' ry='0')
+      rect(ry='0' y='967' x='50' height='7.5' width='84')
+      rect(width='64' height='7.5' x='60' y='979' ry='0')
+      rect(ry='0' y='991' x='60' height='7.5' width='74')
+      rect(width='41' height='7.5' x='93' y='1003' ry='0')
+      rect(ry='0' y='1014' x='66' height='7.5' width='58')
+      rect(width='58' height='7.5' x='56' y='1026' ry='0')
+      rect(ry='0' y='1038' x='50' height='7.5' width='74')
+      rect(width='46' height='7.5' x='88' y='1049' ry='0')
+      rect(ry='0' y='1061' x='105' height='7.5' width='19')
+      rect(width='38' height='7.5' x='96' y='1073' ry='0')
+      rect(ry='0' y='1084' x='73' height='7.5' width='51')
+      rect(ry='0' y='1096' x='88' height='7.5' width='26')
+      rect(width='56' height='7.5' x='68' y='1108' ry='0')
+      rect(ry='0' y='1120' x='100' height='7.5' width='24')
+      rect(width='74' height='7.5' x='50' y='1131' ry='0')
     clipPath#spec-left
       path(d='M85 860c-10 1-25 1-28 13-3 15-3 32 6 45 7 11 23 9 35 9 19-1 35-16 40-34 2-8 4-14 1-19-6-10-20-12-31-13l-23-1z' fill='#333')
     clipPath#spec-right
@@ -24,33 +49,9 @@ svg(xmlns='http://www.w3.org/2000/svg' viewBox="0 0 300 300")
     path.lens(d='M215 860c10 1 24 1 28 13 3 15 3 32-6 45-7 11-23 9-35 9-19-1-35-16-40-34-2-8-4-14-1-19 6-10 20-12 31-13l23-1z' fill='#333')
     path.shades-dot(d='M244 864a4 2 0 004 2 4 2 0 004-2 4 2 0 00-4-1 4 2 0 00-4 1')
     g(clip-path="url(#spec-left)")
-      g(id="code-block").code-block
-        rect(ry='0' y='862' x='60' height='7.5' width='74.6')
-        rect(width='58.3' height='7.5' x='77' y='1026' ry='0')
-        rect(ry='0' y='1014' x='76' height='7.5' width='58.7')
-        rect(width='41.8' height='7.5' x='93' y='1003' ry='0')
-        rect(ry='0' y='991' x='60' height='7.5' width='74.6')
-        rect(width='74.6' height='7.5' x='60' y='979' ry='0')
-        rect(ry='0' y='967' x='60' height='7.5' width='74.6')
-        rect(width='74.6' height='7.5' x='60' y='956' ry='0')
-        rect(ry='0' y='944' x='72' height='7.5' width='62.7')
-        rect(width='51.9' height='7.5' x='83' y='932' ry='0')
-        rect(ry='0' y='921' x='83' height='7.5' width='51.5')
-        rect(width='56.5' height='7.5' x='78' y='909' ry='0')
-        rect(ry='0' y='897' x='60' height='7.5' width='74.6')
-        rect(width='54.4' height='7.5' x='81' y='886' ry='0')
-        rect(ry='0' y='874' x='106' height='7.5' width='29.1')
-        rect(ry='0' y='1084' x='83' height='7.5' width='51.9')
-        rect(width='38.9' height='7.5' x='96' y='1073' ry='0')
-        rect(ry='0' y='1061' x='115' height='7.5' width='20.1')
-        rect(width='47.2' height='7.5' x='88' y='1049' ry='0')
-        rect(ry='0' y='1038' x='60' height='7.5' width='74.6')
-        rect(width='74.6' height='7.5' x='60' y='1131' ry='0')
-        rect(ry='0' y='1120' x='110' height='7.5' width='24.8')
-        rect(width='56.5' height='7.5' x='78' y='1108' ry='0')
-        rect(ry='0' y='1096' x='108' height='7.5' width='27')
-      use(xlink:href="#code-block" y="300")
+      use(xlink:href="#code-block" transform="translate(0 0)")
+      use(xlink:href="#code-block" transform="translate(0 0)" y="283.5")
     g(clip-path="url(#spec-right)")
       use(xlink:href="#code-block" transform="translate(104 0)")
-      use(xlink:href="#code-block" transform="translate(104 0)" y="300")
+      use(xlink:href="#code-block" transform="translate(104 0)" y="283.5")
     path.lens__shine(d='M101 861l-19 66h17l18-65-16-1zM89 860h-4l-3 1-18 59 6 5 19-65z')
